samples/_failures_safe/1761564103_46080d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8f2e0d7.c: In function ‘main’:
./samples/SAFE/__tmp_a8f2e0d7.c:172:5: error: expected declaration or statement at end of input
  172 |     int pos = 0;
      |     ^~~
